my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.4/errors/ECONDINEACH/ECONDINEACH.dmlc_stderr
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECONDINEACH.dml:14:9: error ECONDINEACH: conditional 'in each' is not allowed
C:\Users\nagen\simics-projects\my-intel-simics-project-1\modules\dmlc\test\1.4\errors\T_ECONDINEACH.dml:26:1: warning WEXPERIMENTAL: Use of unsupported feature: top-level 'if' body with unsupported statements
